--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ag-grid-react": "^21.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "holderjs": "^2.9.6",
